# python-project-50

./: README.md  gendiff.cast  pyproject.toml
gendiff/: __init__.py  __main__.py
gendiff/scripts/: gendiff.py
